# Aemeath

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLI_DESIGN.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  LICENSE  PROJECT_SNAPSHOT.md  README.md  package.json  pyproject.toml  requirements.txt  start.ts  tsconfig.json
docs/: API.md  CONFIG.md  DEPLOYMENT.md  DEVELOPMENT.md  FAQ.md  INSTALL.md  LEARNING_GUIDE.md  MULTI_DEVICE_SYNC.md  PHASE1_DEVELOPMENT.md  PRODUCTION_CHECKLIST.md  SELF_LEARNING.md  SETUP.md  TECH_REFERENCE.md  USER_GUIDE.md
src/: index.ts
src/ai/: client.ts  index.ts  prompts.ts  stream.ts
src/cli/: App.tsx  commands.ts
src/cli/components/: ChatInput.tsx  MessageList.tsx  StatusBar.tsx  WelcomeScreen.tsx  index.ts
src/cli/hooks/: index.ts  useAutoComplete.ts
src/core/: context.ts  conversation.ts  engine.ts  index.ts
src/ink/: index.ts  input.ts  reconciler.ts  render.ts  stdin.ts  test-ink.tsx  test-render.tsx  test.tsx  types.d.ts
src/ink/components/: Box.tsx  Text.tsx
src/ink/hooks/: useInput.ts
src/ink/layout/: node.ts  yoga.ts
src/voice/: config.ts  index.ts  manager.ts  tts.ts
tests/ai/: client.test.ts
tests/cli/: app.test.ts  commands.test.ts
tests/core/: core.test.ts
tests/voice/: voice.test.ts
